# slimhls-converter

./: README.md  build.gradle  settings.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
slimhls-converter/: .gitignore  build.gradle
slimhls-converter/src/main/cpp/: CMakeLists.txt
slimhls-converter/src/main/java/com/github/evermindzz/slimhls/converter/: RunBinary.java  RunFFmpeg.java
